# multi-agent-pipeline

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: tests.yml
examples/: consensus_classifier.py  research_pipeline.py
pipeline/: __init__.py  orchestrator.py
tests/: test_pipeline.py
