[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "multi-agent-pipeline"
version = "0.2.0"
description = "Patterns for Claude multi-agent orchestration: sequential, parallel, consensus."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Felix Wickholm", email = "felix@wicflow.com" }]
requires-python = ">=3.9"
dependencies = ["anthropic>=0.40.0"]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.urls]
Homepage = "https://github.com/felixwickholm/multi-agent-pipeline"
Issues = "https://github.com/felixwickholm/multi-agent-pipeline/issues"

[tool.setuptools.packages.find]
include = ["pipeline*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
